--- a/DO316/replicated-template.yaml
+++ b/DO316/replicated-template.yaml
@@ -1,187 +1,151 @@
-apiVersion: template.openshift.io/v1
-kind: Template
+apiVersion: kubevirt.io/v1
+kind: VirtualMachine
 metadata:
   annotations:
-    defaults.template.kubevirt.io/disk: rootdisk
-    description: Template for Red Hat Enterprise Linux 9 VM or newer. A PVC with the
-      RHEL disk image must be available.
-    iconClass: icon-rhel
-    name.os.template.kubevirt.io/rhel9.0: Red Hat Enterprise Linux 9.0 or higher
-    name.os.template.kubevirt.io/rhel9.1: Red Hat Enterprise Linux 9.0 or higher
-    name.os.template.kubevirt.io/rhel9.2: Red Hat Enterprise Linux 9.0 or higher
-    name.os.template.kubevirt.io/rhel9.3: Red Hat Enterprise Linux 9.0 or higher
-    name.os.template.kubevirt.io/rhel9.4: Red Hat Enterprise Linux 9.0 or higher
-    name.os.template.kubevirt.io/rhel9.5: Red Hat Enterprise Linux 9.0 or higher
-    openshift.io/display-name: Red Hat-replicated Template
-    openshift.io/documentation-url: https://github.com/kubevirt/common-templates
-    openshift.io/provider-display-name: RedHat
-    openshift.io/support-url: https://github.com/kubevirt/common-templates/issues
-    openshift.kubevirt.io/pronounceable-suffix-for-name-expression: "true"
-    operator-sdk/primary-resource: openshift-cnv/ssp-kubevirt-hyperconverged
-    operator-sdk/primary-resource-type: SSP.ssp.kubevirt.io
-    tags: hidden,kubevirt,virtualmachine,linux,rhel
-    template.kubevirt.io/containerdisks: |
-      registry.redhat.io/rhel9/rhel-guest-image
-    template.kubevirt.io/editable: |
-      /objects[0].spec.template.spec.domain.cpu.sockets
-      /objects[0].spec.template.spec.domain.cpu.cores
-      /objects[0].spec.template.spec.domain.cpu.threads
-      /objects[0].spec.template.spec.domain.memory.guest
-      /objects[0].spec.template.spec.domain.devices.disks
-      /objects[0].spec.template.spec.volumes
-      /objects[0].spec.template.spec.networks
-    template.kubevirt.io/images: |
-      https://access.redhat.com/downloads/content/479/ver=/rhel---9/9.0/x86_64/product-software
-    template.kubevirt.io/provider: RedHat
-    template.kubevirt.io/provider-support-level: Full
-    template.kubevirt.io/provider-url: https://www.redhat.com
-    template.kubevirt.io/version: v1alpha1
-    template.openshift.io/bindable: "false"
-  creationTimestamp: "2025-06-13T09:36:01Z"
+    kubemacpool.io/transaction-timestamp: "2025-06-29T07:17:59.005512123Z"
+    kubevirt.io/latest-observed-api-version: v1
+    kubevirt.io/storage-observed-api-version: v1
+    vm.kubevirt.io/validations: |
+      [
+        {
+          "name": "minimal-required-memory",
+          "path": "jsonpath::.spec.domain.memory.guest",
+          "rule": "integer",
+          "message": "This VM requires more memory.",
+          "min": 1610612736
+        }
+      ]
+  finalizers:
+  - kubevirt.io/virtualMachineControllerFinalize
+  generation: 4
   labels:
-    app.kubernetes.io/component: templating
-    app.kubernetes.io/managed-by: ssp-operator
-    app.kubernetes.io/name: custom-templates
-    app.kubernetes.io/part-of: hyperconverged-cluster
-    app.kubernetes.io/version: 4.16.2
-    flavor.template.kubevirt.io/small: "true"
-    os.template.kubevirt.io/rhel9.0: "true"
-    os.template.kubevirt.io/rhel9.1: "true"
-    os.template.kubevirt.io/rhel9.2: "true"
-    os.template.kubevirt.io/rhel9.3: "true"
-    os.template.kubevirt.io/rhel9.4: "true"
-    os.template.kubevirt.io/rhel9.5: "true"
-    template.kubevirt.io/type: vm
-    template.kubevirt.io/version: v0.29.2
+    app: replicated-template
+    kubevirt.io/dynamic-credentials-support: "true"
     vm.kubevirt.io/template: rhel9-server-small
     vm.kubevirt.io/template.namespace: openshift
-    workload.template.kubevirt.io/server: "true"
-  name: replicated-template
-  namespace: banana
-  resourceVersion: "1580308"
-  uid: ddf82c63-2d7e-4a32-9d31-37abca04a734
-objects:
-- apiVersion: kubevirt.io/v1
-  kind: VirtualMachine
-  metadata:
-    annotations:
-      vm.kubevirt.io/validations: |
-        [
-          {
-            "name": "minimal-required-memory",
-            "path": "jsonpath::.spec.domain.memory.guest",
-            "rule": "integer",
-            "message": "This VM requires more memory.",
-            "min": 1610612736
-          }
-        ]
-    labels:
-      app: ${NAME}
-      kubevirt.io/dynamic-credentials-support: "true"
-      vm.kubevirt.io/template: replicated-template
-      vm.kubevirt.io/template.namespace: banana
-      vm.kubevirt.io/template.revision: "1"
-    name: ${NAME}
-    namespace: banana
-  spec:
-    dataVolumeTemplates:
-    - apiVersion: cdi.kubevirt.io/v1beta1
-      kind: DataVolume
-      metadata:
-        name: ${NAME}
-      spec:
-        sourceRef:
-          kind: DataSource
-          name: ${DATA_SOURCE_NAME}
-          namespace: ${DATA_SOURCE_NAMESPACE}
-        storage:
-          resources:
-            requests:
-              storage: 30Gi
-    - metadata:
-        name: ${NAME}-goldimg
-      spec:
-        preallocation: false
-        source:
-          blank: {}
-        storage:
-          resources:
-            requests:
-              storage: 5Gi
-          storageClassName: ocs-external-storagecluster-ceph-rbd-virtualization
-    running: false
-    template:
-      metadata:
-        annotations:
-          vm.kubevirt.io/flavor: small
-          vm.kubevirt.io/os: rhel9
-          vm.kubevirt.io/workload: server
-        labels:
-          kubevirt.io/domain: ${NAME}
-          kubevirt.io/size: small
-      spec:
-        architecture: amd64
-        domain:
-          cpu:
-            cores: 1
-            sockets: 1
-            threads: 1
-          devices:
-            disks:
-            - disk:
-                bus: virtio
-              name: rootdisk
-            - disk:
-                bus: virtio
-              name: cloudinitdisk
-            - disk:
-                bus: virtio
-              name: goldimg
-              shareable: null
-            interfaces:
-            - masquerade: {}
-              model: virtio
-              name: default
-            rng: {}
-          features:
-            smm:
-              enabled: true
-          firmware:
-            bootloader:
-              efi: {}
-          memory:
-            guest: 2Gi
-        networks:
-        - name: default
-          pod: {}
-        terminationGracePeriodSeconds: 180
-        volumes:
-        - dataVolume:
-            name: ${NAME}
-          name: rootdisk
-        - dataVolume:
-            name: ${NAME}-goldimg
-          name: goldimg
-        - cloudInitNoCloud:
-            userData: |
-              #cloud-config
-              user: raja
-              password: anishrana2001
-              chpasswd:
-                expire: false
-          name: cloudinitdisk
-parameters:
-- description: VM name
-  from: rhel9-[a-z0-9]{16}
-  generate: expression
-  name: NAME
-- description: Name of the DataSource to clone
-  name: DATA_SOURCE_NAME
-  value: rhel9
-- description: Namespace of the DataSource
-  name: DATA_SOURCE_NAMESPACE
-  value: openshift-virtualization-os-images
-- description: Randomized password for the cloud-init user cloud-user
-  from: '[a-z0-9]{4}-[a-z0-9]{4}-[a-z0-9]{4}'
-  generate: expression
-  name: CLOUD_USER_PASSWORD
+    vm.kubevirt.io/template.revision: "1"
+    vm.kubevirt.io/template.version: v0.29.2
+  name: replicated-template1
+  namespace: vm-image
+spec:
+  dataVolumeTemplates:
+  - apiVersion: cdi.kubevirt.io/v1beta1
+    kind: DataVolume
+    metadata:
+      name: replicated-template
+    spec:
+      sourceRef:
+        kind: DataSource
+        name: rhel9
+        namespace: openshift-virtualization-os-images
+      storage:
+        resources:
+          requests:
+            storage: 30Gi
+  - metadata:
+      name: replicated-template-goldimg
+    spec:
+      preallocation: false
+      source:
+        blank: {}
+      storage:
+        resources:
+          requests:
+            storage: 10Gi
+        storageClassName: ocs-external-storagecluster-ceph-rbd-virtualization
+  running: false
+  template:
+    metadata:
+      annotations:
+        vm.kubevirt.io/flavor: small
+        vm.kubevirt.io/os: rhel9
+        vm.kubevirt.io/workload: server
+      creationTimestamp: null
+      labels:
+        kubevirt.io/domain: replicated-template
+        kubevirt.io/size: small
+        network.kubevirt.io/headlessService: headless
+    spec:
+      architecture: amd64
+      domain:
+        cpu:
+          cores: 1
+          sockets: 1
+          threads: 1
+        devices:
+          disks:
+          - disk:
+              bus: virtio
+            name: rootdisk
+          - disk:
+              bus: virtio
+            name: cloudinitdisk
+          - disk:
+              bus: virtio
+            name: goldimg
+          interfaces:
+          - masquerade: {}
+            model: virtio
+            name: default
+          rng: {}
+        features:
+          acpi: {}
+          smm:
+            enabled: true
+        firmware:
+          bootloader:
+            efi: {}
+        machine:
+          type: pc-q35-rhel9.4.0
+        memory:
+          guest: 2Gi
+        resources: {}
+      networks:
+      - name: default
+        pod: {}
+      terminationGracePeriodSeconds: 180
+      volumes:
+      - dataVolume:
+          name: replicated-template
+        name: rootdisk
+      - dataVolume:
+          name: replicated-template-goldimg
+        name: goldimg
+      - cloudInitNoCloud:
+          userData: |
+            #cloud-config
+            user: raja
+            password: anishrana2001
+            chpasswd:
+              expire: false
+        name: cloudinitdisk
+status:
+  conditions:
+  - lastProbeTime: "2025-06-29T07:18:04Z"
+    lastTransitionTime: "2025-06-29T07:18:04Z"
+    message: VMI does not exist
+    reason: VMINotExists
+    status: "False"
+    type: Ready
+  - lastProbeTime: null
+    lastTransitionTime: null
+    message: All of the VMI's DVs are bound and not running
+    reason: AllDVsReady
+    status: "True"
+    type: DataVolumesReady
+  - lastProbeTime: null
+    lastTransitionTime: null
+    status: "True"
+    type: LiveMigratable
+  desiredGeneration: 4
+  observedGeneration: 4
+  printableStatus: Stopped
+  runStrategy: Halted
+  volumeSnapshotStatuses:
+  - enabled: true
+    name: rootdisk
+  - enabled: true
+    name: goldimg
+  - enabled: false
+    name: cloudinitdisk
+    reason: Snapshot is not supported for this volumeSource type [cloudinitdisk]
