--- a/DO316/web1.template.yaml
+++ b/DO316/web1.template.yaml
@@ -4,7 +4,7 @@ metadata:
   annotations:
     defaults.template.kubevirt.io/disk: rootdisk
     description: Template for Red Hat Enterprise Linux 9 VM or newer. A PVC with the
-      RHEL disk image must be available. web1 template
+      RHEL disk image must be available.
     iconClass: icon-rhel
     name.os.template.kubevirt.io/rhel9.0: Red Hat Enterprise Linux 9.0 or higher
     name.os.template.kubevirt.io/rhel9.1: Red Hat Enterprise Linux 9.0 or higher
@@ -15,6 +15,47 @@ metadata:
     openshift.io/display-name: Red Hat Enterprise -web1 Template
     openshift.io/documentation-url: https://github.com/kubevirt/common-templates
     openshift.io/provider-display-name: Anish Rana EX316
+    openshift.io/support-url: https://github.com/kubevirt/common-templates/issues
+    openshift.kubevirt.io/pronounceable-suffix-for-name-expression: "true"
+    operator-sdk/primary-resource: openshift-cnv/ssp-kubevirt-hyperconverged
+    operator-sdk/primary-resource-type: SSP.ssp.kubevirt.io
+    tags: hidden,kubevirt,virtualmachine,linux,rhel
+    template.kubevirt.io/containerdisks: |
+      registry.redhat.io/rhel9/rhel-guest-image
+    template.kubevirt.io/editable: |
+      /objects[0].spec.template.spec.domain.cpu.sockets
+      /objects[0].spec.template.spec.domain.cpu.cores
+      /objects[0].spec.template.spec.domain.cpu.threads
+      /objects[0].spec.template.spec.domain.memory.guest
+      /objects[0].spec.template.spec.domain.devices.disks
+      /objects[0].spec.template.spec.volumes
+      /objects[0].spec.template.spec.networks
+    template.kubevirt.io/images: |
+      https://access.redhat.com/downloads/content/479/ver=/rhel---9/9.0/x86_64/product-software
+    template.kubevirt.io/provider: RedHat
+    template.kubevirt.io/provider-support-level: Full
+    template.kubevirt.io/provider-url: https://www.redhat.com
+    template.kubevirt.io/version: v1alpha1
+    template.openshift.io/bindable: "false"
+  creationTimestamp: "2025-06-13T09:39:30Z"
+  labels:
+    app.kubernetes.io/component: templating
+    app.kubernetes.io/managed-by: ssp-operator
+    app.kubernetes.io/name: custom-templates
+    app.kubernetes.io/part-of: hyperconverged-cluster
+    app.kubernetes.io/version: 4.16.2
+    flavor.template.kubevirt.io/small: "true"
+    os.template.kubevirt.io/rhel9.0: "true"
+    os.template.kubevirt.io/rhel9.1: "true"
+    os.template.kubevirt.io/rhel9.2: "true"
+    os.template.kubevirt.io/rhel9.3: "true"
+    os.template.kubevirt.io/rhel9.4: "true"
+    os.template.kubevirt.io/rhel9.5: "true"
+    template.kubevirt.io/type: vm
+    template.kubevirt.io/version: v0.29.2
+    vm.kubevirt.io/template: rhel9-server-small
+    vm.kubevirt.io/template.namespace: openshift
+    workload.template.kubevirt.io/server: "true"
   name: web1-template
   namespace: vm-image
 objects:
